--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://jasonsebastian.github.io",
+  "homepage": "https://jasonsebastian.github.io/spiritual-gifts-survey",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
